Finish profile page

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -29,7 +29,7 @@ const { urlMenuItem } = Astro.props;
         MENU_ITEMS.map((item) => (
           <li
             class:list={[
-              "max-lg:tooltip max-lg:tooltip-primary",
+              "max-xl:tooltip max-xl:tooltip-primary",
               {
                 "max-sm:tooltip-bottom max-xl:tooltip-left":
                   item.tooltip === "left",
