Improvements and adding the part of the experiences

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,3 +37,8 @@ const {
   <Footer></Footer>
   </body>
 </html>
+<style is:global>
+    #timeline ol:last-of-type li:last-of-type {
+        padding-bottom: 0px;
+    }
+</style>
