--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -60,7 +60,7 @@ const { urlMenuItem } = Astro.props;
     </ul>
     <div class="navbar-end max-sm:w-1/3 ml-2 md:ml-0">
       <ThemeController />
-      <button class="btn text-lg btn-accent ml-4 max-md:hidden animate-bounce animate-twice">
+      <button class="btn text-lg btn-accent ml-4 max-md:hidden animate-bounce animate-twice transition">
         <Icon name="download" />
         Descargar CV</button>
     </div>
