--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 import { EXPERIENCES } from "../config";
 import TimeLine from "../components/TimeLine.astro";
 ---
-<Layout urlMenuItem="/experience">
+<Layout title="Experiencia" urlMenuItem="/experience">
 
     <div class="flex justify-center flex-col px-5 items-center">
         <div class="max-w-screen-lg w-full">
@@ -39,8 +39,6 @@ import TimeLine from "../components/TimeLine.astro";
                 </div>
 
             </section>
-
-            
     </div>
   </div>
 </Layout >
