Correction of deployment in netlify

--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -47,7 +47,7 @@ import { Image } from "astro:assets";
               format="webp"
               src={heroImage}
               alt={title}
-              class="w-full md:w-2/3 mb-4 mt-0 border-2 rounded-t-2x rounded-lg border-primary"
+              class="w-full lg:w-2/3 mb-4 mt-0 border-2 rounded-t-2x rounded-lg border-primary"
             />
           )
         }
