--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -80,6 +80,7 @@ const currentYear = new Date().getFullYear();
                     <Icon name="programming" class="mr-2" /> Link de interes
                 </h4>
                 <ul class="list-image-[url(/check.svg)]">
+                    <li><a href="/profile" class="no-underline hover:underline">Perfil</a></li>
                     <li><a href="/experience" class="no-underline hover:underline">Experiencia</a></li>
                     <li><a href="/proyects" class="no-underline hover:underline">Proyectos</a></li>
                     <li><a href="/blog" class="no-underline hover:underline">Blog</a></li>
